--- a/order-summary-component-main/order-summary-component-main/style.css
+++ b/order-summary-component-main/order-summary-component-main/style.css
@@ -1,22 +1,117 @@
-* {
-  background-color: hsl(225, 100%, 94%);
-}
-
-.body {
+body {
   margin: 0.5rem;
+  font-family: "Red Hat Display", sans-serif;
+  background-color: hsl(225, 100%, 94%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header-img-container {
   display: flex;
   justify-content: center;
   margin-top: 5rem;
+  max-width: 90%;
 }
 
 .header-img-container img {
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
-  max-width: 90%;
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+  width: 100%;
 }
+
+main {
+  display: flex;
+  background: hsl(225, 100%, 98%);
+  width: 90%;
+  max-width: 450px;
+  border-bottom-left-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+}
+
+.information {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.order h2 {
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 0rem;
+  color: hsl(223, 47%, 23%);
+}
+
+.listen {
+  text-align: center;
+  font-size: 0.8rem;
+  font-weight: 500;
+  padding: 0 1rem;
+  line-height: 230%;
+  color: hsl(224, 23%, 55%);
+}
+
+.contract {
+  display: flex;
+  justify-content: flex-start;
+  background-color: hsl(225, 100%, 96%);
+  width: 85%;
+  padding: 1rem 0rem;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+}
+
+.contract img {
+  margin-left: 0.5rem;
+}
+
+.plan {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 0.5rem;
+}
+
+.plan h4 {
+  margin: 0rem;
+  color: hsl(224, 23%, 55%);
+}
+
+.plan .annual {
+  color: hsl(223, 47%, 23%);
+  font-weight: 900;
+}
+
+.contract a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-weight: 600;
+  margin-left: 2.9rem;
+}
+
+button {
+  font-family: "Red Hat Display", sans-serif;
+  margin-top: 1rem;
+  background-color: hsl(245, 75%, 52%);
+  border-radius: 0.5rem;
+  color: white;
+  padding: 0.8rem 0rem;
+  width: 85%;
+  text-align: center;
+  font-size: 1rem;
+  border: none;
+  box-shadow: 0px 5px 10px hsl(224, 23%, 55%);
+}
+
+.cancel {
+  background: hsl(225, 100%, 98%);
+  color: hsl(224, 23%, 55%);
+  font-weight: 900;
+  box-shadow: none;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
