--- a/order-summary-component-main/order-summary-component-main/style.css
+++ b/order-summary-component-main/order-summary-component-main/style.css
@@ -1,7 +1,8 @@
 body {
   margin: 0.5rem;
   font-family: "Red Hat Display", sans-serif;
-  background-color: hsl(225, 100%, 94%);
+  background-image: url(./images/pattern-background-mobile.svg);
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,7 +11,7 @@ body {
 .header-img-container {
   display: flex;
   justify-content: center;
-  margin-top: 5rem;
+  margin-top: 2rem;
   max-width: 90%;
 }
 
@@ -110,6 +111,11 @@ button {
   color: hsl(224, 23%, 55%);
   font-weight: 900;
   box-shadow: none;
+}
+
+.cancel:hover,
+.proceed:hover {
+  cursor: pointer;
 }
 
 .attribution {
