--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 body {
-  margin: 0.5rem;
   font-family: "Red Hat Display", sans-serif;
+}
+
+.card {
   background-image: url(./images/pattern-background-mobile.svg);
   background-repeat: no-repeat;
+  background-position: center top;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .header-img-container {
