--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body {
 }
 
 .card {
-  background-image: url(./images/pattern-background-mobile.svg);
+  background: url(./images/pattern-background-mobile.svg), hsl(225, 100%, 94%);
   background-repeat: no-repeat;
   background-position: center top;
+  background-size: contain;
   align-items: center;
   display: flex;
   flex-direction: column;
